Layout case modified

--- a/templates/analyses/cases/_favorites.html
+++ b/templates/analyses/cases/_favorites.html
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-    <table class="table table-bordered table-striped responsive">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>File name</th>
