--- a/templates/analyses/cases/show.html
+++ b/templates/analyses/cases/show.html
@@ -4,7 +4,7 @@
     <div class="crumbs">
         <ol class="breadcrumb hidden-xs">
             <li>
-                <i class="fa fa-home"></i><a href="/">Home</a>
+                <i class="fa fa-home"></i><a href="/">Dashboard</a>
             </li>
             <li>
                 <a href="{% url "analyses.views.list_cases" %}"><i class="fa fa-book"> </i> Cases</a>
@@ -19,7 +19,7 @@
         </ol>
     </div>
 </div>
-
+    
     <div class="content">
         <div class="page-h1">
             <h1>Case: <small>
