--- a/templates/analyses/images/new_image.html
+++ b/templates/analyses/images/new_image.html
@@ -1,49 +1,48 @@
     {% extends "base.html" %}
 
     {% block content %}
-    <div class="span11">
-        <div class="content content-large">
-            <div class="content-header">
-                <h2><i class="icon-briefcase"> </i> Cases</h2>
-            </div>
-            <div class="content-breadcrumb">
-                <ul class="breadcrumb">
-                    <li>
-                        <a href="/"><i class="icon-home"></i> Dashboard</a><span class="divider">&rsaquo;</span>
-                    </li>
-                    <li>
-                        <a href="{% url "analyses.views.list_cases" %}"><i class="icon-briefcase"> </i> Cases</a>
-                        <span class="divider">&rsaquo;</span>
-                    </li>
-                    <li>
-                        <a href="{% url "analyses.views.show_case" case.id "list" %}"><i class="icon-book"> </i>
-                            {% if case.name|length > 70 %}
-                                {{ case.name|slice:":70" }} ...
-                            {% else %}
-                                {{ case.name }}
-                            {% endif %}
-                        </a><span class="divider">&rsaquo;</span>
-                    </li>
-                    <li class="active">
-                        New Image
-                    </li>
-                </ul>
-            </div>
-            <div class="content-body">
-                <div class="row-fluid">
-                    <p>
-                        <div id="uploader"></div>
-                    </p>
-                    <div id="filelist" class="hide">
-                        <strong id="generic_error">
-                            <i class="icon-warning-sign text-error"></i>
-                            Errors:
-                        </strong>
-                        <strong id="server_error" class="hide">
-                            <i class="icon-warning-sign text-error"></i>
-                            Server error: unexpected error, try to reload page and check logs.
-                        </strong>
-                    </div>
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li>
+                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+            </li>
+            <li>
+                <a href="{% url "analyses.views.list_cases" %}"><i class="fa fa-book"> </i> Cases</a>
+            </li>
+             <li>
+                <a href="{% url "analyses.views.show_case" case.id "list" %}"><i class="fa fa-th-list"> </i>
+                    {% if case.name|length > 70 %}
+                        {{ case.name|slice:":70" }} ...
+                    {% else %}
+                        {{ case.name }}
+                    {% endif %}
+                </a>
+            </li>
+            <li class="active">
+                New image
+            </li>
+        </ol>
+    </div>
+</div>
+
+    <div class="content">
+        <div class="page-h1">
+            <h1>Upload photo</h1>
+        </div>
+        <div class="col-md-12">
+            <div class="wdgt">
+                <p>
+                    <div id="uploader"></div>
+                </p>
+                <div id="filelist" class="hide">
+                    <strong id="generic_error">
+                        <i class="icon-warning-sign text-error"></i>
+                        Errors:
+                    </strong>
+                    <strong id="server_error" class="hide">
+                        <i class="icon-warning-sign text-error"></i>
+                        Server error: unexpected error, try to reload page and check logs.
+                    </strong>
                 </div>
             </div>
         </div>
