--- a/static/css/plupload/jquery.plupload.queue.css
+++ b/static/css/plupload/jquery.plupload.queue.css
@@ -1,216 +1,205 @@
-/*
+/* 
    Plupload
 ------------------------------------------------------------------- */
 
+.plupload_wrapper * {
+	box-sizing: content-box;
+}
+
 .plupload_button {
-    margin-left: 4px;
+    background-color: #8dcd8d;
+    border-color: #4cae4c;
+    color: #ffffff;
+    -moz-user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857;
+    margin-bottom: 0;
+    padding: 6px 12px;
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap;
+    border: 3px solid transparent;
+    border-radius: 0;
+    padding: 5px 9px;
 }
 
 .plupload_button:hover {
-    color: #000;
+	color: #ffffff;
+	text-decoration: none;
+    background-color: #8dcd8d;
+    border-color: #398439;
+}
+
+.plupload_disabled, a.plupload_disabled:hover, a.plupload_disabled:visited, a.plupload_disabled:link {
+    color: #737373;
+    border-color: #c5c5c5;
+    background: #ededed;
+	cursor: default;
+    margin-left: 10px;
     text-decoration: none;
 }
 
-.plupload_disabled, a.plupload_disabled:hover {
+.plupload_start, a.plupload_start:hover, a.plupload_start:visited, a.plupload_start:link {
     color: #737373;
     border-color: #c5c5c5;
-    cursor: default;
+    background: #ededed;
+	cursor: default;
+    margin-left: 10px;
+    text-decoration: none;
 }
 
-.plupload_add {
+.plupload_add,a.plupload_add:hover, a.plupload_add:visited, a.plupload_add:link, a.plupload_add:active {
     background-position: -181px center;
+    text-decoration: none;
 }
 
 .plupload_wrapper {
-    width: 100%;
+	font: normal 11px Verdana,sans-serif;
+	width: 100%;
 }
 
 .plupload_container {
-    padding: 8px;
-    background: url('/static/img/plupload/transp50.png');
+	padding: 8px;
+	background: url('/static/img/plupload/transp50.png');
+	/*-moz-border-radius: 5px;*/
 }
 
 .plupload_container input {
-    border: 1px solid #DDD;
-    width: 98%;
+	border: 1px solid #DDD;
+	font: normal 11px Verdana,sans-serif;
+	width: 98%;
 }
 
-.plupload_header {background: #2A2C2E url('/static/img/plupload/backgrounds.gif') repeat-x;}
+.plupload_header {background: #ffffff}
 .plupload_header_content {
-    background: url('/static/img/plupload/backgrounds.gif') no-repeat 0 -317px;
-    min-height: 56px;
+    background: rgba(0, 0, 0, 0) url("/static/img/plupload/cloud-upload.png") no-repeat scroll 10px center;
     padding-left: 60px;
-    color: #FFF;
+    color: #666;
 }
 .plupload_header_title {
-    font: normal 18px sans-serif;
-    padding: 6px 0 3px;
+	font: normal 18px sans-serif;
+	padding: 6px 0 3px;
 }
 .plupload_header_text {
-    font: normal 12px sans-serif;
+	font: normal 12px sans-serif;
 }
 
 .plupload_filelist {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
 .plupload_scroll .plupload_filelist {
-    height: 185px;
-    background: #F5F5F5;
-    overflow-y: scroll;
+	height: 185px;
+	background: #F5F5F5;
+	overflow-y: scroll;
 }
 
 .plupload_filelist li {
-    padding: 10px 8px;
-    background: #F5F5F5 url('/static/img/plupload/backgrounds.gif') repeat-x 0 -156px;
-    border-bottom: 1px solid #DDD;
+	padding: 10px 8px;
+	background: #F5F5F5 url('/static/img/plupload/backgrounds.gif') repeat-x 0 -156px;
+	border-bottom: 1px solid #DDD;
 }
 
 .plupload_filelist_header, .plupload_filelist_footer {
-    background: #DFDFDF;
-    padding: 8px 8px;
-    color: #42454A;
+	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #ffffff 0%, #f5f5f5 100%) repeat scroll 0 0;
+    border-bottom: 1px solid #c9c9c9;
+    border-top: medium none;
+    padding: 12px 8px 11px;
 }
 .plupload_filelist_header {
-    border-top: 1px solid #EEE;
-    border-bottom: 1px solid #CDCDCD;
+	border-top: 1px solid #EEE;
+	border-bottom: 1px solid #CDCDCD;
 }
 
-.plupload_filelist_footer {border-top: 1px solid #FFF; height: 22px; line-height: 20px; vertical-align: middle;}
-.plupload_file_name {float: left; overflow: hidden; }
+.plupload_filelist_footer {border-top: 1px solid #FFF; height: 35px; line-height: 20px; vertical-align: middle;}
+.plupload_file_name {float: left; overflow: hidden}
 .plupload_file_status {color: #777;}
 .plupload_file_status span {color: #42454A;}
 .plupload_file_size, .plupload_file_status, .plupload_progress {
-    float: right;
-    width: 80px;
+	float: right;
+	width: 80px;
 }
 .plupload_file_size, .plupload_file_status, .plupload_file_action {text-align: right;}
 
-.plupload_filelist .plupload_file_name {width: auto}
+.plupload_filelist .plupload_file_name {
+	width: 205px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
 
 .plupload_file_action {
-    float: right;
-    width: 16px;
-    height: 16px;
-    margin-left: 15px;
+	float: right;
+	width: 16px;
+	height: 16px;
+	margin-left: 15px;
 }
 
 .plupload_file_action * {
-    display: none;
-    width: 16px;
-    height: 16px;
+	display: none;
+	width: 16px;
+	height: 16px;
 }
 
 li.plupload_uploading {background: #ECF3DC url('/static/img/plupload/backgrounds.gif') repeat-x 0 -238px;}
 li.plupload_done {color:#AAA}
 
 li.plupload_delete a {
-    background: url('/static/img/plupload/delete.gif');
+	background: url('/static/img/plupload/delete.gif');
 }
 
 li.plupload_failed a {
-    background: url('/static/img/plupload/error.gif');
-    cursor: default;
+	background: url('/static/img/plupload/error.gif');
+	cursor: default;
 }
 
 li.plupload_done a {
-    background: url('/static/img/plupload/done.gif');
-    cursor: default;
+	background: url('/static/img/plupload/done.gif');
+	cursor: default;
 }
 
 .plupload_progress, .plupload_upload_status {
-    display: none;
+	display: none;
 }
 
 .plupload_progress_container {
-    margin-top: 3px;
-    border: 1px solid #CCC;
-    background: #FFF;
-    padding: 1px;
+	margin-top: 3px;
+	border: 1px solid #CCC;
+	background: #FFF;
+	padding: 1px;
 }
 .plupload_progress_bar {
-    width: 0px;
-    height: 7px;
-    background: #CDEB8B;
+	width: 0px;
+	height: 7px;
+	background: #CDEB8B;
 }
 
 .plupload_scroll .plupload_filelist_header .plupload_file_action, .plupload_scroll .plupload_filelist_footer .plupload_file_action {
-    margin-right: 17px;
+	margin-right: 17px;
 }
 
 /* Floats */
 
 .plupload_clear,.plupload_clearer {clear: both;}
 .plupload_clearer, .plupload_progress_bar {
-    display: block;
-    font-size: 0;
-    line-height: 0;
+	display: block;
+	font-size: 0;
+	line-height: 0;	
 }
 
 li.plupload_droptext {
-    background: transparent;
-    text-align: center;
-    vertical-align: middle;
-    border: 0;
-    line-height: 165px;
+	background: transparent;
+	text-align: center;
+	vertical-align: middle;
+	border: 0;
+	line-height: 165px;
     font-size: 20px;
-    color: #666;
-}
-
-/* Custom styles */
-.plupload_container {
-    padding: 0;
-    background: none;
-}
-.plupload_header {
-    background: none;
-    border-bottom: 1px solid #c9c9c9;
-}
-.plupload_header_content {
-    background: url(/static/img/plupload/cloud-upload.png) no-repeat 10px center;
-    color: #666;
-}
-
-.plupload_filelist_header {
-    background: #ffffff;
-    background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJodâ€¦EiIGhlaWdodD0iMSIgZmlsbD0idXJsKCNncmFkLXVjZ2ctZ2VuZXJhdGVkKSIgLz4KPC9zdmc+);
-    background: -moz-linear-gradient(top, #ffffff 0%, #f5f5f5 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f5f5f5));
-    background: -webkit-linear-gradient(top, #ffffff 0%,#f5f5f5 100%);
-    background: -o-linear-gradient(top, #ffffff 0%,#f5f5f5 100%);
-    background: -ms-linear-gradient(top, #ffffff 0%,#f5f5f5 100%);
-    background: linear-gradient(to bottom, #ffffff 0%,#f5f5f5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f5f5f5',GradientType=0 );
-    border-top: none;
-    border-bottom: 1px solid #c9c9c9;
-    padding: 12px 8px 11px;
-}
-
-.plupload_filelist_footer {
-    background: #ffffff;
-    background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJodâ€¦EiIGhlaWdodD0iMSIgZmlsbD0idXJsKCNncmFkLXVjZ2ctZ2VuZXJhdGVkKSIgLz4KPC9zdmc+);
-    background: -moz-linear-gradient(top, #ffffff 0%, #f5f5f5 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f5f5f5));
-    background: -webkit-linear-gradient(top, #ffffff 0%,#f5f5f5 100%);
-    background: -o-linear-gradient(top, #ffffff 0%,#f5f5f5 100%);
-    background: -ms-linear-gradient(top, #ffffff 0%,#f5f5f5 100%);
-    background: linear-gradient(to bottom, #ffffff 0%,#f5f5f5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f5f5f5',GradientType=0 );
-    border-top: 1px solid #c9c9c9;
-    height: 40px;
-    line-height: 20px;
-}
-
-#filelist{
-    width:auto;
-    height:150px;
-    overflow-y:scroll;
-    overflow-y:hide;
-    text-align: left;
-}
-
-.result_button{
-    margin-left: 4px;
+    color:#666;
 }
