Search layout fixed

--- a/templates/analyses/images/search.html
+++ b/templates/analyses/images/search.html
@@ -1,22 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="span11">
-    <div class="content content-large">
-        <div class="content-header">
-            <h2><i class="icon-search"> </i> Search</h2>
-        </div>
-        <div class="content-breadcrumb">
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/"><i class="icon-home"> </i> Dashboard</a><span class="divider">&rsaquo;</span>
-                </li>
-                <li class="active">
-                    Search
-                </li>
-            </ul>
-        </div>
-        {% include "layout/_searchForm.html" with in_case_id=False %}
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li>
+                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+            </li>
+            <li class="active">
+                Search
+            </li>
+        </ol>
     </div>
 </div>
+
+    <div class="content">
+        <div class="page-h1">
+            <h1>Search <small>in all cases or specific case</small></h1>
+        </div>
+        <div class="col-md-12">
+            <div class="wdgt">
+                {% include "layout/_searchForm.html" with in_case_id=False %}
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
