Botton group deleted

--- a/templates/analyses/cases/_tbl_case.html
+++ b/templates/analyses/cases/_tbl_case.html
@@ -1,7 +1,7 @@
 {% load add_get_parameter %}
 
 {% if case.state == "O" %}
-    <div class="pull-right btn-group">
+    <div class="pull-right">
         <a type="button" class="btn btn-success" data-tooltip="tooltip" title="Add" data-toggle="dropdown">
             <i class="fa fa-plus"></i> <span class="caret"></span>
         </a>
