--- a/templates/hashes/new.html
+++ b/templates/hashes/new.html
@@ -1,60 +1,63 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="span11">
-    <div class="content content-large">
-        <div class="content-header">
-            <h2><i class="icon-table"> </i> Hashes</h2>
-        </div>
-        <div class="content-breadcrumb">
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/"><i class="icon-home"> </i> Dashboard</a><span class="divider">&rsaquo;</span>
-                </li>
-                <li>
-                    <a href="{% url "hashes.views.list_hashes" %}"><i class="icon-table"> </i> Hashes</a>
-                    <span class="divider">&rsaquo;</span>
-                </li>
-                <li class="active">
-                    New hash list
-                </li>
-            </ul>
-        </div>
-        <div class="content-body">
-            <form action="{% url "hashes.views.new_hashes" %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
-                <div class="control-group">
-                    <div class="controls">
-                        {{ form.non_field_errors }}
-                        <div class="fieldWrapper">
-                            <label for="id_name">Name:</label>
-                            {{ form.name }}<span class="help-inline">{{ form.name.errors }}</span>
-                        </div>
-                        <div class="fieldWrapper">
-                            <label for="id_description">Description:</label>
-                            <textarea id="id_description" rows="3" name="description" style="width: 350px"></textarea><span class="help-inline">{{ form.description.errors }}</span>
-                        </div>
-                        <div class="fieldWrapper">
-                            <label for="id_cipher">Cipher:</label>
-                            {{ form.cipher }}<span class="help-inline">{{ form.cipher.errors }}</span>
-                        </div>
-                        <div class="fieldWrapper">
-                            <label for="id_public">{{ form.public }} Public - <small> shared with other users</small></label>
-                            <span class="help-inline">{{ form.public.errors }}</span>
-                        </div>
-                        <div class="fieldWrapper">
-                            <label for="id_hash_list">File:</label>
-                            {{ form.hash_list }}<span class="help-inline">{{ form.hash_list.errors }}</span>
-                        </div>
-                        <div class="form-actions">
-                            <button id="btn_submit" type="submit" class="btn btn-large btn-success">
-                                Save
-                            </button>
-                            <a href="{% url "hashes.views.list_hashes" %}" class="btn btn-large"> Back </a>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
+
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li>
+                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+            </li>
+            <li>
+                <a href="{% url "hashes.views.list_hashes" %}"><i class="fa fa-book"> </i> Hashes</a>
+            </li>
+            <li class="active">
+                New hash list
+            </li>
+        </ol>
     </div>
 </div>
+
+    <div class="content">
+        <div class="page-h1">
+            <h1>Hashes</h1>
+        </div>
+        <div class="col-md-12">
+            <div class="wdgt">
+                <form action="{% url "hashes.views.new_hashes" %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                    <div class="control-group">
+                        <div class="controls">
+                            {{ form.non_field_errors }}
+                            <div class="fieldWrapper">
+                                <label for="id_name">Name:</label>
+                                {{ form.name }}<span class="help-inline">{{ form.name.errors }}</span>
+                            </div>
+                            <div class="fieldWrapper">
+                                <label for="id_description">Description:</label>
+                                <textarea id="id_description" rows="3" name="description" style="width: 350px"></textarea><span class="help-inline">{{ form.description.errors }}</span>
+                            </div>
+                            <div class="fieldWrapper">
+                                <label for="id_cipher">Cipher:</label>
+                                {{ form.cipher }}<span class="help-inline">{{ form.cipher.errors }}</span>
+                            </div>
+                            <div class="fieldWrapper">
+                                <label for="id_public">{{ form.public }} Public - <small> shared with other users</small></label>
+                                <span class="help-inline">{{ form.public.errors }}</span>
+                            </div>
+                            <div class="fieldWrapper">
+                                <label for="id_hash_list">File:</label>
+                                {{ form.hash_list }}<span class="help-inline">{{ form.hash_list.errors }}</span>
+                            </div>
+                            <div class="form-actions">
+                                <button id="btn_submit" type="submit" class="btn btn-large btn-success">
+                                    Save
+                                </button>
+                                <a href="{% url "hashes.views.list_hashes" %}" class="btn btn-large"> Back </a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
