--- a/templates/layout/_sidebar.html
+++ b/templates/layout/_sidebar.html
@@ -40,41 +40,15 @@
 <div id="secondary" class="btn-group visible-xs">
     <button type="button" class="btn btn-info btn-sm dropdown-toggle" data-toggle="dropdown"><span class="icon icon-th-large"></span>&nbsp;&nbsp;Navigation&nbsp;&nbsp;<span class="caret"></span></button>
     <ul class="dropdown-menu dropdown-info pull-right" role="menu">
-        <li><a href="index.html">Dashboard</a></li>
-        <li><a href="#">Labels</a></li>
-        <li><a href="#">Admin</a></li>
+        <li><a href="/">Dashboard</a></li>
+        <li><a href="{% url "analyses.views.list_cases" %}">Cases</a></li>
+        <li><a href="{% url "analyses.views.list_images" "list" %}">Images</a></li>
         <li class="divider" style="border-bottom:1px solid #ddd; margin:0px; margin-top:5px;"></li>
-        <li><a href="typography.html">Typography</a></li>
-        <li><a href="charts.html">Charts</a></li>
-        <li><a href="widgets.html">Widgets</a></li>
-        <li class="divider" style="border-bottom:1px solid #ddd; margin:0px; margin-top:5px;"></li>
-        <li class="dropdown-header">UI Elements</li>
-        <li><a href="alerts_notifications.html">Alerts & Notifications</a></li>
-        <li><a href="tabs_accordion.html">Tabs & Accordions</a></li>
-        <li><a href="buttons.html">Buttons & Icons</a></li>
-        <li class="divider" style="border-bottom:1px solid #ddd; margin:0px; margin-top:5px;"></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li class="divider" style="border-bottom:1px solid #ddd; margin:0px; margin-top:5px;"></li>
-        <li class="dropdown-header">Forms</li>
-        <li><a href="form_basic.html">Basic Form Elements</a></li>
-        <li><a href="form_advanced.html">Advanced Form Elements</a></li>
-        <li><a href="form_wysiwyg.html">WYSIWYG</a></li>
-        <li><a href="form_validation.html">Form Validation</a></li>
-        <li class="divider" style="border-bottom:1px solid #ddd; margin:0px; margin-top:5px;"></li>
-        <li class="dropdown-header">Tables</li>
-        <li><a href="form_basic.html">Static Tables</a></li>
-        <li><a href="form_advanced.html">jQuery Datatables</a></li>
-        <li class="divider" style="border-bottom:1px solid #ddd; margin:0px; margin-top:5px;"></li>
-        <li><a href="storyboard.html">Storyboard</a></li>
-        <li><a href="calendar.html">Calendar</a></li>
-        <li><a href="maps.html">Maps</a></li>
-        <li class="divider" style="border-bottom:1px solid #ddd; margin:0px; margin-top:5px;"></li>
-        <li class="dropdown-header">Pages</li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="FAQ.html">F.A.Q.</a></li>
-        <li><a href="grid.html">Grid</a></li>
-        <li><a href="grid.html">404 Error Template</a></li>
-        <li><a href="invoice.html">Invoice</a></li>
+        <li><a href="{% url "analyses.views.search" "form" %}">Search</a></li>
+        <li><a href="{% url "hashes.views.list_hashes" %}">Hash</a></li>
+        {% if request.user.is_stuff or request.user.is_superuser %}
+        <li><a href="{% url "users.views.admin_list_users" %}">Admin</a></li>
+        {% endif %}
     </ul>
 </div>
 <div id="secondary-search" class="input-icon visible-xs">
@@ -84,9 +58,9 @@
 <div class="right">
     <div class="nav">
         <div class="bar">
-            <div class="logo-small visible-xs"><img src="lib/img/logo3.png"></div>
+            <div class="logo-small visible-xs"><img src="/static/img/logo/logo_ghiro77x35.png"></div>
             <ul class="nav nav-pills hidden-xs">
-                <li class="active"><a href="index.html"><span class="fa fa-dashboard"></span>Dashboard</a></li>
+                <li class="active"><a href="/"><span class="fa fa-dashboard"></span>Dashboard</a></li>
                 <li><a href="#"><span class="icon icon-barcode"></span>Labels <span class="label label-primary">1,078</span></a></li>
                 <li><a href="#"><span class="icon icon-cog"></span>Admin</a></li>
             </ul>
