--- a/templates/layout/_indexCase.html
+++ b/templates/layout/_indexCase.html
@@ -1,16 +1,16 @@
 <div class="box">
-    <table class="table table-hover datatables">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Status</th>
-                <th>Created at</th>
-                <th>Owner</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% if cases %}
+    {% if cases %}
+        <table class="table table-hover datatables">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Status</th>
+                    <th>Created at</th>
+                    <th>Owner</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
                 {% for case in cases %}
                     <tr>
                         <td>
@@ -38,11 +38,9 @@
                         </td>
                     </tr>
                 {% endfor %}
-            {% else %}
-                <tr>
-                    <td>No data available in table </td>
-                </tr>
-            {% endif %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    {% else %}
+        <blockquote>No data available in table</blockquote>
+    {% endif %}
 </div>
