--- a/templates/admin/user_activity.html
+++ b/templates/admin/user_activity.html
@@ -1,24 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="span11">
-    <div class="content content-large">
-        <div class="content-header">
-            <h2><i class="icon-list"> </i> Activity <small>your activity log</small></h2>
-        </div>
-        <div class="content-breadcrumb">
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/"><i class="icon-home"> </i> Dashboard</a><span class="divider">&rsaquo;</span>
-                </li>
-                <li class="active">
-                    {{ user.username }}'s activity
-                </li>
-            </ul>
-        </div>
-        <div class="content-body">
-            {% include "admin/_list_activity.html" %}
-        </div>
+
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li>
+                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+            </li>
+            <li class="active">
+                {{ user.username }}'s activity
+            </li>
+        </ol>
     </div>
 </div>
+
+    <div class="content">
+        <div class="page-h1">
+            <h1>Activity <small>your activity log</small></h1>
+        </div>
+        <div class="col-md-12">
+            <div class="wdgt">
+                {% include "admin/_list_activity.html" %}
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
