--- a/templates/hashes/index.html
+++ b/templates/hashes/index.html
@@ -71,7 +71,7 @@
                                 </table>
                             {% else %}
                                 <div class="alert alert-info">
-                                    <span class="icon icon-exclamation-sign"></span>
+                                    <span class="fa fa-info-circle"></span>
                                     <strong>Info!</strong>
                                     No data available
                                 </div>
@@ -109,7 +109,7 @@
                                 </table>
                             {% else %}
                                 <div class="alert alert-info">
-                                    <span class="icon icon-exclamation-sign"></span>
+                                    <span class="fa fa-info-circle"></span>
                                     <strong>Info!</strong>
                                     No data available
                                 </div>
