--- a/templates/layout/_indexCase.html
+++ b/templates/layout/_indexCase.html
@@ -41,6 +41,10 @@
             </tbody>
         </table>
     {% else %}
-        <blockquote>No data available in table</blockquote>
+        <div class="alert alert-info">
+            <span class="fa fa-info-circle"></span>
+            <strong>Info!</strong>
+            No data available
+        </div>
     {% endif %}
 </div>
